--- a/reports/Test-Report-2026.02.09.13.16.23.html
+++ b/reports/Test-Report-2026.02.09.13.16.23.html
@@ -35,7 +35,7 @@
 <a href="#"><span class="badge badge-primary">opencart Functional Testing</span></a>
 </li>
 <li class="m-r-10">
-<a href="#"><span class="badge badge-primary">Jan 19, 2026 04:28:09 PM</span></a>
+<a href="#"><span class="badge badge-primary">Feb 9, 2026 01:16:23 PM</span></a>
 </li>
 </ul>
 </div>
@@ -85,14 +85,14 @@
 </ul>
 </div>    <div class="test-list-wrapper scrollable">
       <ul class="test-list-item">
-        <li class="test-item"  status="pass" test-id="1"
+        <li class="test-item"  status="pass" test-id="3"
           author=""
           tag="Regression Master"
           device="">
           <div class="test-detail">
             <p class="name">testCases.TC001_AccountRegistrationPage</p>
             <p class="text-sm">
-              <span>4:28:19 PM</span> / <span>00:00:00:017</span>
+              <span>1:16:31 PM</span> / <span>00:00:00:000</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -101,10 +101,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testCases.TC001_AccountRegistrationPage</h5>
-<span class='badge badge-success'>01.19.2026 4:28:19 PM</span>
-<span class='badge badge-danger'>01.19.2026 4:28:19 PM</span>
-<span class='badge badge-default'>00:00:00:017</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=1</span>
+<span class='badge badge-success'>02.09.2026 1:16:31 PM</span>
+<span class='badge badge-danger'>02.09.2026 1:16:31 PM</span>
+<span class='badge badge-default'>00:00:00:000</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=3</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -118,7 +118,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:28:19 PM</td>
+        <td>1:16:31 PM</td>
         <td>
           verify_account_registration got successfully executed
         </td>
@@ -128,14 +128,14 @@
 </div>
           </div>
         </li>
-        <li class="test-item"  status="pass" test-id="2"
+        <li class="test-item"  status="pass" test-id="4"
           author=""
           tag="Sanity Master"
           device="">
           <div class="test-detail">
             <p class="name">testCases.TC002_LoginTest</p>
             <p class="text-sm">
-              <span>4:28:24 PM</span> / <span>00:00:00:000</span>
+              <span>1:16:37 PM</span> / <span>00:00:00:002</span>
               <span class="badge pass-bg log float-right">Pass</span>
             </p>
           </div>
@@ -144,10 +144,10 @@
 <div class="p-v-10">
 <div class="info">
 <h5 class="test-status text-pass">testCases.TC002_LoginTest</h5>
-<span class='badge badge-success'>01.19.2026 4:28:24 PM</span>
-<span class='badge badge-danger'>01.19.2026 4:28:24 PM</span>
-<span class='badge badge-default'>00:00:00:000</span>
-&middot; <span class='uri-anchor badge badge-default'>#test-id=2</span>
+<span class='badge badge-success'>02.09.2026 1:16:37 PM</span>
+<span class='badge badge-danger'>02.09.2026 1:16:37 PM</span>
+<span class='badge badge-default'>00:00:00:002</span>
+&middot; <span class='uri-anchor badge badge-default'>#test-id=4</span>
 <span title='Skip to the next failed step' class='badge badge-danger pointer float-right ne ml-1'><i class="fa fa-fast-forward"></i></span>
 <span title='Collapse all nodes' class='badge badge-default pointer float-right ct ml-1'><i class="fa fa-compress"></i></span>
 <span title='Expand all nodes' class='badge badge-default pointer float-right et'><i class="fa fa-expand"></i></span>
@@ -161,7 +161,7 @@
   <tbody>
       <tr class="event-row">
         <td><span class="badge log pass-bg">Pass</span></td>
-        <td>4:28:24 PM</td>
+        <td>1:16:37 PM</td>
         <td>
           verify_login got successfully executed
         </td>
@@ -212,9 +212,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:28:19 PM</td>
+<td>13:16:31 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>testCases.TC001_AccountRegistrationPage</a>
+<a href="#" class="linked" test-id='3' id='3'>testCases.TC001_AccountRegistrationPage</a>
 </td>
 </tr>
 </tbody>
@@ -245,16 +245,16 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:28:19 PM</td>
+<td>13:16:31 PM</td>
 <td>
-<a href="#" class="linked" test-id='1' id='1'>testCases.TC001_AccountRegistrationPage</a>
+<a href="#" class="linked" test-id='3' id='3'>testCases.TC001_AccountRegistrationPage</a>
 </td>
 </tr>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:28:24 PM</td>
+<td>13:16:37 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>testCases.TC002_LoginTest</a>
+<a href="#" class="linked" test-id='4' id='4'>testCases.TC002_LoginTest</a>
 </td>
 </tr>
 </tbody>
@@ -285,9 +285,9 @@
 <tbody>
 <tr class="tag-test-status" status="pass">
 <td><span class="badge log pass-bg">Pass</span></td>
-<td>16:28:24 PM</td>
+<td>13:16:37 PM</td>
 <td>
-<a href="#" class="linked" test-id='2' id='2'>testCases.TC002_LoginTest</a>
+<a href="#" class="linked" test-id='4' id='4'>testCases.TC002_LoginTest</a>
 </td>
 </tr>
 </tbody>
@@ -307,13 +307,13 @@
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Started</p>
-<h3>Jan 19, 2026 04:28:09 PM</h3>
+<h3>Feb 9, 2026 01:16:23 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
 <div class="card"><div class="card-body">
 <p class="m-b-0">Ended</p>
-<h3>Jan 19, 2026 04:28:24 PM</h3>
+<h3>Feb 9, 2026 01:16:37 PM</h3>
 </div></div>
 </div>
 <div class="col-md-3">
@@ -383,7 +383,7 @@
 </div></div>
 <script>
 var timeline = {
-"testCases.TC001_AccountRegistrationPage":0.017,"testCases.TC002_LoginTest":0
+"testCases.TC001_AccountRegistrationPage":0,"testCases.TC002_LoginTest":0.002
 };
 </script>
 <div class="row">
@@ -453,6 +453,10 @@ var timeline = {
 <tr>
 <td>Browser</td>
 <td>chrome</td>
+</tr>
+<tr>
+<td>Groups</td>
+<td>[Master, Regression]</td>
 </tr>
 </tbody>
 </table></div>
